# grader

./: BlogPost.md  LICENSE  README.md  SETUP.md  requirements.txt
assignmentgrader/: .env-example  README.md  pyproject.toml  report.md
assignmentgrader/assignment/: rubric.md
assignmentgrader/assignments/assignment1/: assignment.md  rubric.md
assignmentgrader/assignments/assignment1/evaluations/gemini-2.0-flash-exp/: gemini-evaluation.md  gpt4o-evaluation.md
assignmentgrader/assignments/assignment1/evaluations/gpt-4o-mini/: gemini-evaluation.md  gpt4o-evaluation.md
assignmentgrader/assignments/assignment1/evaluations/grok-2-1212/: gemini-evaluation.md  gpt4o-evaluation.md
assignmentgrader/assignments/assignment1/evaluations/llama-3.3-70b-versatile/: gemini-evaluation.md  gpt4o-evaluation.md
assignmentgrader/assignments/assignment1/submissions/: gemini.py  gpt4o.py
assignmentgrader/assignments/assignment2/: assignment.md  rubric.md
assignmentgrader/assignments/assignment2/evaluations/gemini-2.0-flash-exp/: Conjuntos-evaluation.md  deepseek-evaluation.md
assignmentgrader/assignments/assignment2/submissions/: Conjuntos.java  deepseek.cs
assignmentgrader/evaluations/: gemini-evaluation.md  gpt4o-evaluation.md
assignmentgrader/src/assignmentgrader/: crew.py  main.py
assignmentgrader/src/assignmentgrader/config/: agents.yaml  tasks.yaml
rubricgenerator/: README.md  pyproject.toml
rubricgenerator/assignment/: assignment.md
rubricgenerator/src/rubricgenerator/: crew.py  main.py
rubricgenerator/src/rubricgenerator/config/: agents.yaml  tasks.yaml
(+6 files in other folders)
