[project]
name = "assignmentgrader"
version = "0.1.0"
description = "AssignmentGrader using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
assignmentgrader = "assignmentgrader.main:run"
run_crew = "assignmentgrader.main:run"
train = "assignmentgrader.main:train"
replay = "assignmentgrader.main:replay"
test = "assignmentgrader.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
